policy_transpiler/erebus.Core/Scripts/Grammar/erebusParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Scripts/Grammar/erebus.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class erebusParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, WS=6, COMMENT=7, SEMI=8, PLUS=9, 
		MINUS=10, MULT=11, DIV=12, EQUAL=13, ASSIGN=14, NOTEQUAL=15, GT=16, LT=17, 
		GTEQ=18, LTEQ=19, AND=20, OR=21, NOT=22, CONTAINS=23, LPAREN=24, RPAREN=25, 
		LBRACKET=26, RBRACKET=27, BLOCK_OPEN=28, BLOCK_CLOSE=29, TRUE=30, FALSE=31, 
		POLICY=32, NUMBER=33, ID=34, STRING=35;
	public const int
		RULE_compilationUnit = 0, RULE_statement = 1, RULE_function = 2, RULE_bodystmt = 3, 
		RULE_printstmt = 4, RULE_assignstmt = 5, RULE_ifstmt = 6, RULE_action = 7, 
		RULE_conditionExpr = 8, RULE_logicalExpr = 9, RULE_comparisonExpr = 10, 
		RULE_cmpOperand = 11, RULE_logicalEntity = 12, RULE_opExpression = 13, 
		RULE_cmpOp = 14, RULE_logicOp = 15, RULE_numericTerm = 16, RULE_funcname = 17, 
		RULE_value = 18, RULE_api = 19, RULE_list = 20, RULE_array = 21;
	public static readonly string[] ruleNames = {
		"compilationUnit", "statement", "function", "bodystmt", "printstmt", "assignstmt", 
		"ifstmt", "action", "conditionExpr", "logicalExpr", "comparisonExpr", 
		"cmpOperand", "logicalEntity", "opExpression", "cmpOp", "logicOp", "numericTerm", 
		"funcname", "value", "api", "list", "array"
	};

	private static readonly string[] _LiteralNames = {
		null, "'function'", "','", "'console.log('", "'let'", "'if'", null, null, 
		"';'", "'+'", "'-'", "'*'", "'/'", "'=='", "'='", "'!='", "'>'", "'<'", 
		"'>='", "'<='", "'&&'", "'||'", "'!'", null, "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "'true'", "'false'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, "WS", "COMMENT", "SEMI", "PLUS", "MINUS", 
		"MULT", "DIV", "EQUAL", "ASSIGN", "NOTEQUAL", "GT", "LT", "GTEQ", "LTEQ", 
		"AND", "OR", "NOT", "CONTAINS", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
		"BLOCK_OPEN", "BLOCK_CLOSE", "TRUE", "FALSE", "POLICY", "NUMBER", "ID", 
		"STRING"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "erebus.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static erebusParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public erebusParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public erebusParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CompilationUnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(erebusParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterCompilationUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitCompilationUnit(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitContext compilationUnit() {
		CompilationUnitContext _localctx = new CompilationUnitContext(Context, State);
		EnterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 44;
				statement();
				}
				}
				State = 49;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 50;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionContext function() {
			return GetRuleContext<FunctionContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			function();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FuncnameContext funcname() {
			return GetRuleContext<FuncnameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(erebusParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(erebusParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLOCK_OPEN() { return GetToken(erebusParser.BLOCK_OPEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLOCK_CLOSE() { return GetToken(erebusParser.BLOCK_CLOSE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(erebusParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(erebusParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BodystmtContext[] bodystmt() {
			return GetRuleContexts<BodystmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BodystmtContext bodystmt(int i) {
			return GetRuleContext<BodystmtContext>(i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(Context, State);
		EnterRule(_localctx, 4, RULE_function);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			Match(T__0);
			State = 55;
			funcname();
			State = 56;
			Match(LPAREN);
			State = 65;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 57;
				Match(ID);
				State = 62;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__1) {
					{
					{
					State = 58;
					Match(T__1);
					State = 59;
					Match(ID);
					}
					}
					State = 64;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 67;
			Match(RPAREN);
			State = 68;
			Match(BLOCK_OPEN);
			State = 72;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << POLICY))) != 0)) {
				{
				{
				State = 69;
				bodystmt();
				}
				}
				State = 74;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 75;
			Match(BLOCK_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BodystmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IfstmtContext ifstmt() {
			return GetRuleContext<IfstmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrintstmtContext printstmt() {
			return GetRuleContext<PrintstmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignstmtContext assignstmt() {
			return GetRuleContext<AssignstmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ActionContext action() {
			return GetRuleContext<ActionContext>(0);
		}
		public BodystmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bodystmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterBodystmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitBodystmt(this);
		}
	}

	[RuleVersion(0)]
	public BodystmtContext bodystmt() {
		BodystmtContext _localctx = new BodystmtContext(Context, State);
		EnterRule(_localctx, 6, RULE_bodystmt);
		try {
			State = 81;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__4:
				EnterOuterAlt(_localctx, 1);
				{
				State = 77;
				ifstmt();
				}
				break;
			case T__2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 78;
				printstmt();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 79;
				assignstmt();
				}
				break;
			case POLICY:
				EnterOuterAlt(_localctx, 4);
				{
				State = 80;
				action();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintstmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(erebusParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(erebusParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public PrintstmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_printstmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterPrintstmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitPrintstmt(this);
		}
	}

	[RuleVersion(0)]
	public PrintstmtContext printstmt() {
		PrintstmtContext _localctx = new PrintstmtContext(Context, State);
		EnterRule(_localctx, 8, RULE_printstmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			Match(T__2);
			State = 85;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LBRACKET) | (1L << NUMBER) | (1L << ID) | (1L << STRING))) != 0)) {
				{
				State = 84;
				value();
				}
			}

			State = 87;
			Match(RPAREN);
			State = 88;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignstmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(erebusParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(erebusParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(erebusParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ApiContext api() {
			return GetRuleContext<ApiContext>(0);
		}
		public AssignstmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignstmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterAssignstmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitAssignstmt(this);
		}
	}

	[RuleVersion(0)]
	public AssignstmtContext assignstmt() {
		AssignstmtContext _localctx = new AssignstmtContext(Context, State);
		EnterRule(_localctx, 10, RULE_assignstmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			Match(T__3);
			State = 91;
			Match(ID);
			State = 92;
			Match(ASSIGN);
			State = 95;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 93;
				value();
				}
				break;
			case 2:
				{
				State = 94;
				api();
				}
				break;
			}
			State = 97;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfstmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(erebusParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConditionExprContext conditionExpr() {
			return GetRuleContext<ConditionExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(erebusParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLOCK_OPEN() { return GetToken(erebusParser.BLOCK_OPEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BodystmtContext bodystmt() {
			return GetRuleContext<BodystmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLOCK_CLOSE() { return GetToken(erebusParser.BLOCK_CLOSE, 0); }
		public IfstmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifstmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterIfstmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitIfstmt(this);
		}
	}

	[RuleVersion(0)]
	public IfstmtContext ifstmt() {
		IfstmtContext _localctx = new IfstmtContext(Context, State);
		EnterRule(_localctx, 12, RULE_ifstmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			Match(T__4);
			State = 100;
			Match(LPAREN);
			State = 101;
			conditionExpr();
			State = 102;
			Match(RPAREN);
			State = 103;
			Match(BLOCK_OPEN);
			State = 104;
			bodystmt();
			State = 105;
			Match(BLOCK_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode POLICY() { return GetToken(erebusParser.POLICY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(erebusParser.SEMI, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_action; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterAction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitAction(this);
		}
	}

	[RuleVersion(0)]
	public ActionContext action() {
		ActionContext _localctx = new ActionContext(Context, State);
		EnterRule(_localctx, 14, RULE_action);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			Match(POLICY);
			State = 108;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConditionExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LogicalExprContext logicalExpr() {
			return GetRuleContext<LogicalExprContext>(0);
		}
		public ConditionExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conditionExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterConditionExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitConditionExpr(this);
		}
	}

	[RuleVersion(0)]
	public ConditionExprContext conditionExpr() {
		ConditionExprContext _localctx = new ConditionExprContext(Context, State);
		EnterRule(_localctx, 16, RULE_conditionExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			logicalExpr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LogicalExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOT() { return GetToken(erebusParser.NOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LogicalExprContext[] logicalExpr() {
			return GetRuleContexts<LogicalExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LogicalExprContext logicalExpr(int i) {
			return GetRuleContext<LogicalExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComparisonExprContext comparisonExpr() {
			return GetRuleContext<ComparisonExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(erebusParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(erebusParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LogicalEntityContext logicalEntity() {
			return GetRuleContext<LogicalEntityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LogicOpContext logicOp() {
			return GetRuleContext<LogicOpContext>(0);
		}
		public LogicalExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logicalExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterLogicalExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitLogicalExpr(this);
		}
	}

	[RuleVersion(0)]
	public LogicalExprContext logicalExpr() {
		return logicalExpr(0);
	}

	private LogicalExprContext logicalExpr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		LogicalExprContext _localctx = new LogicalExprContext(Context, _parentState);
		LogicalExprContext _prevctx = _localctx;
		int _startState = 18;
		EnterRecursionRule(_localctx, 18, RULE_logicalExpr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 113;
				Match(NOT);
				State = 114;
				logicalExpr(4);
				}
				break;
			case 2:
				{
				State = 115;
				comparisonExpr();
				}
				break;
			case 3:
				{
				State = 116;
				Match(LPAREN);
				State = 117;
				logicalExpr(0);
				State = 118;
				Match(RPAREN);
				}
				break;
			case 4:
				{
				State = 120;
				logicalEntity();
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 129;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LogicalExprContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_logicalExpr);
					State = 123;
					if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
					State = 124;
					logicOp();
					State = 125;
					logicalExpr(6);
					}
					} 
				}
				State = 131;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class ComparisonExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CmpOperandContext[] cmpOperand() {
			return GetRuleContexts<CmpOperandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CmpOperandContext cmpOperand(int i) {
			return GetRuleContext<CmpOperandContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CmpOpContext cmpOp() {
			return GetRuleContext<CmpOpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONTAINS() { return GetToken(erebusParser.CONTAINS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(erebusParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(erebusParser.RPAREN, 0); }
		public ComparisonExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comparisonExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterComparisonExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitComparisonExpr(this);
		}
	}

	[RuleVersion(0)]
	public ComparisonExprContext comparisonExpr() {
		ComparisonExprContext _localctx = new ComparisonExprContext(Context, State);
		EnterRule(_localctx, 20, RULE_comparisonExpr);
		try {
			State = 142;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 132;
				cmpOperand();
				State = 133;
				cmpOp();
				State = 134;
				cmpOperand();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 136;
				cmpOperand();
				State = 137;
				Match(CONTAINS);
				State = 138;
				Match(LPAREN);
				State = 139;
				cmpOperand();
				State = 140;
				Match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CmpOperandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OpExpressionContext opExpression() {
			return GetRuleContext<OpExpressionContext>(0);
		}
		public CmpOperandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cmpOperand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.EnterCmpOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IerebusListener typedListener = listener as IerebusListener;
			if (typedListener != null) typedListener.ExitCmpOperand(this);
		}
	}
